...

  get instagram => null;

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('home-page'),
      backgroundColor: const Color.fromARGB(255, 255, 98, 0),
      appBar: AppBar(
        actions: <Widget>[
          PopupMenuButton<String>(
            key: const Key('popup-socials'),
            onSelected: (value) {
              if (value != 'close') AppLaunch.launchURL(value);
            },
            itemBuilder: (BuildContext context) => <PopupMenuEntry<String>>[
              const PopupMenuItem<String>(
                value: 'https://www.instagram.com/altynbek_chotonov/',
...
                child: ListTile(
                  leading: Icon(FontAwesomeIcons.facebook),
                  title: Text('Facebook'),
                ),
              ),
              const PopupMenuItem<String>(
                key: Key('popup-menu-close'),
                value: 'close',
                child: ListTile(
                  leading: Icon(Icons.close),
                  title: Text('Close'),
                ),
              ),
...
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              crossAxisAlignment: CrossAxisAlignment.center,
              children: [
                // Elevated Button
                ElevatedButton(
                    key: const Key('home-to-uchurashuu'),
                    onPressed: isActive
                        ? () {
                            {
                              Navigator.push(
                                context,
                                MaterialPageRoute(builder: (context) => const Uchurashuu()),
...
                    child: const Text(
                      'Учурашуу',
                      style: TextStyle(color: Color.fromARGB(255, 255, 89, 0), fontSize: 20),
                    )),
                // Elevated Button
                ElevatedButton(
                    key: const Key('home-to-koshtoshuu'),
                    onPressed: isActive
                        ? () {
                            {
                              Navigator.push(
                                context,
                                MaterialPageRoute(builder: (context) => const Koshtoshuu()),
...
