...
class Uchurashuu extends StatelessWidget {
  const Uchurashuu({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('uchurashuu-page'),
      backgroundColor: const Color.fromARGB(255, 255, 255, 255),
      appBar: AppBar(
        centerTitle: true,
        systemOverlayStyle: SystemUiOverlayStyle.light.copyWith(
          statusBarColor: const Color(0xff751E85),
        ),
...
