...
class Koshtoshuu extends StatelessWidget {
  const Koshtoshuu({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('koshtoshuu-page'),
      backgroundColor: const Color.fromARGB(255, 255, 255, 255),
      appBar: AppBar(
        centerTitle: true,
        systemOverlayStyle: SystemUiOverlayStyle.light.copyWith(
          statusBarColor: const Color(0xff751E85),
        ),
...
